# Helix-Analysis-Program

./: .gitignore  Flowchart PT.drawio  LICENSE.txt  MANIFEST.in  README.md  Todo Projet Transverse.txt  dssp.txt  parse_file.py  requirements.txt  setup.cfg  simulaid.f  simulaid_module.f  subroutine addatom.f  subroutine adjust_xtraj.f  subroutine amoeba.f  subroutine angdistw.f  subroutine arminmax2.f  subroutine bestoverlay.f  subroutine bondcorrsum.f  subroutine bondlenstat.f  subroutine breakbond0.f  subroutine calcturnperres.f  subroutine cellpart.f  subroutine checkdir.f  subroutine checkfordup.f  subroutine checkforhelix.py  subroutine checkhbclose.f  subroutine checkhblist.f  subroutine checknameforAC.f  subroutine checkreschargesum.f  subroutine checkwall.f  subroutine chosename.f  subroutine circfit.py  subroutine clstrs.f  subroutine clusterplot.f  subroutine colcodeminmax.f  subroutine colstrip.f  subroutine compact.f  subroutine compare_rrdist.f  subroutine comparetree.f  (+109 more)
coding by ourselves/: H_bonds.py  adapt_hbond.py  axe-inertie.py  axes_data.txt  centre-gravite.py  check_irregularities.py  dssp.py  find_patterns.py  parse_file.py  parse_structure.py  second approach.txt  test_angle.py  trajectory.py
documents/: TRAJELIX.md  TRAJELIX_workflow.md  flowcharts.drawio
flowcharts/: Flowchart PT.drawio
images/: Untitled Diagram.drawio
output/: dssp_glut1.txt
python translations/: function dacoscheck.py  subroutine RMScalc.py  subroutine angcomp.py  subroutine calcperp.py  subroutine check_rotmat.py  subroutine checkbend.py  subroutine cofms.py  (+10 more)
(+613 files in other folders)
