[metadata]
name = helix-analysis-program
version = 0.0.1
license = MIT
description = Program to analyze helices in molecules
long_description = file: README.rst
author = Mehdi Munim, Hassna Boudalil, Romain Fourel, Naima Oulhourchemt
classifiers=
    Environment :: Console 
    Development Status :: 5 - Production/Stable 
    Framework :: Matplotlib 
    Intended Audience :: Science/Research 
    Programming Language :: Python :: 3 
    Topic :: Scientific/Engineering 
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy 
    matplotlib 
    MDanalysis 
    biopython 

[options.packages.find]
where=src
